--- a/app/app/views/layouts/bootstrap.html.erb
+++ b/app/app/views/layouts/bootstrap.html.erb
@@ -52,6 +52,9 @@
             <li><%= link_to "Link2", "/path2"  %></li>
             <li><%= link_to "Link3", "/path3"  %></li>
           </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %>  </li>
+          </ul>
         </div>
       </div>
     </div>
