--- a/app/app/views/presentation/somos.html.erb
+++ b/app/app/views/presentation/somos.html.erb
@@ -11,23 +11,20 @@ La Red Nacional de Aprendizaje y Servicio Chile reúne  a profesores, estudiante
 	<li>Encuentro: Integrada por Gabriela Valenzuela, Gema Santander  (U Sto. Tomás), Rubén Vidal (H. de Cristo), Loreto Martínez (H. de Cristo) y Chantal Jouannet. Comisión encargada de organizar el encuentro anual de Aprendizaje y Servicio en Chile, además de gestionar los patrocinadores para el mismo. Actualmente se encuentra gestionando el próximo encuentro que se realizará en enero del próximo año.</li>
 </ul>
 <br>
-<div class="somos" >
-	<table>
-		<tr><td>ORGANIZACIONES ADHERIDAS </td></tr>
-		<tr><td>Universidad Andrés Bello </td></tr>
-		<tr><td>Universidad de Chile </td></tr>
-		<tr><td>Universidad Católica de Temuco </td></tr>
-		<tr><td>Pontificie Universidad Católica de Chile </td></tr>
-		<tr><td>Universidad Católica Silva Henríquez </td></tr>
-		<tr><td>Universidad Central </td></tr>
-		<tr><td>Universidad Católica de Valparaíso </td></tr>
-		<tr><td>Universidad de Concepción </td></tr>
-		<tr><td>Universidad Adolfo Ibañez </td></tr>
-		<tr><td>Universidad Austral </td></tr>
-		<tr><td>Universidad Alberto Hurtado </td></tr>
-		<tr><td>Universidad de Santiago de Chile </td></tr>
-		<tr><td>Universidad de la Frontera </td></tr>
-		<tr><td>Hogar de Cristo </td></tr>
-		<tr><td>Maristas Chile </td></tr>
-</table>
-</div>
+
+<h2>ORGANIZACIONES ADHERIDAS</h2>
+<%= link_to(image_tag("instituciones/hdc.png", id: "logoInstituciones"),"http://www.hogardecristo.cl/?show_home=1") %>
+<%= link_to(image_tag("instituciones/maristas.png", id: "logoInstituciones"),"http://www.maristas.cl/") %>
+<%= link_to(image_tag("instituciones/PUC.gif", id: "logoInstituciones"),"http://www.uc.cl/") %>
+<%= link_to(image_tag("instituciones/pucv.png", id: "logoInstituciones"),"http://www.ucv.cl/") %>
+<%= link_to(image_tag("instituciones/uadolfo.png", id: "logoInstituciones"),"http://www.uai.cl/") %>
+<%= link_to(image_tag("instituciones/uaustral.png", id: "logoInstituciones"),"https://www.uach.cl/") %>
+<%= link_to(image_tag("instituciones/ucentral.png", id: "logoInstituciones"),"http://www.ucentral.cl/prontus_ucentral2012/site/edic/base/port/inicio.html") %>
+<%= link_to(image_tag("instituciones/uchile.png", id: "logoInstituciones"),"http://www.uchile.cl/") %>
+<%= link_to(image_tag("instituciones/uconce.gif", id: "logoInstituciones"),"https://www.udec.cl/pexterno/") %>
+<%= link_to(image_tag("instituciones/UFRO.gif", id: "logoInstituciones"),"http://www.ufro.cl/") %>
+<%= link_to(image_tag("instituciones/uhurtado.png", id: "logoInstituciones"),"http://www.uahurtado.cl/") %>
+<%= link_to(image_tag("instituciones/unab.png", id: "logoInstituciones"),"http://www.unab.cl/") %>
+<%= link_to(image_tag("instituciones/usach.png", id: "logoInstituciones"),"http://www.usach.cl/") %>
+<%= link_to(image_tag("instituciones/usilvahenriquez.png", id: "logoInstituciones"),"http://ww3.ucsh.cl/") %>
+<%= link_to(image_tag("instituciones/utemuco.png", id: "logoInstituciones"),"http://www.uct.cl/") %>
