--- a/app/app/views/presentation/estatutos.html.erb
+++ b/app/app/views/presentation/estatutos.html.erb
@@ -57,11 +57,11 @@
 			<p>La Red tiene el propósito de generar acciones concretas de promoción del “Aprendizaje Servicio en Chile” en cada uno de los sectores señalados, que permitan:</p>
 
 			<ol id = "estatutos" type="1"> 
-				<li>LInstalar el enfoque metodológico de “Aprendizaje Servicio” en distintas instituciones de educación, tales como colegios, institutos profesionales, universidades, etc. 
-				<li>LImpulsar la investigación de la propuesta metodológica de “Aprendizaje Servicio”.
-				<li>LFomentar y patrocinar la sistematización de las distintas experiencias sobre “Aprendizaje Servicio”
-				<li>LDifundir y comunicar en Chile el enfoque metodológico de “Aprendizaje Servicio”.
-				<li>LFortalecer la red y articulación con redes afines
+				<li>Instalar el enfoque metodológico de “Aprendizaje Servicio” en distintas instituciones de educación, tales como colegios, institutos profesionales, universidades, etc. 
+				<li>Impulsar la investigación de la propuesta metodológica de “Aprendizaje Servicio”.
+				<li>Fomentar y patrocinar la sistematización de las distintas experiencias sobre “Aprendizaje Servicio”
+				<li>Difundir y comunicar en Chile el enfoque metodológico de “Aprendizaje Servicio”.
+				<li>Fortalecer la red y articulación con redes afines
 			</ol>
 
 			<p>La Red entiende por “Aprendizaje Servicio” lo siguiente: </p>
@@ -261,11 +261,11 @@
 		<p>La Red tiene el propósito de generar acciones concretas de promoción del “Aprendizaje Servicio en Chile” en cada uno de los sectores señalados, que permitan:</p>
 
 		<ol id = "estatutos" type="1"> 
-			<li>LInstalar el enfoque metodológico de “Aprendizaje Servicio” en distintas instituciones de educación, tales como colegios, institutos profesionales, universidades, etc. 
-			<li>LImpulsar la investigación de la propuesta metodológica de “Aprendizaje Servicio”.
-			<li>LFomentar y patrocinar la sistematización de las distintas experiencias sobre “Aprendizaje Servicio”
-			<li>LDifundir y comunicar en Chile el enfoque metodológico de “Aprendizaje Servicio”.
-			<li>LFortalecer la red y articulación con redes afines
+			<li>Instalar el enfoque metodológico de “Aprendizaje Servicio” en distintas instituciones de educación, tales como colegios, institutos profesionales, universidades, etc. 
+			<li>Impulsar la investigación de la propuesta metodológica de “Aprendizaje Servicio”.
+			<li>Fomentar y patrocinar la sistematización de las distintas experiencias sobre “Aprendizaje Servicio”
+			<li>Difundir y comunicar en Chile el enfoque metodológico de “Aprendizaje Servicio”.
+			<li>Fortalecer la red y articulación con redes afines
 		</ol>
 
 		<p>La Red entiende por “Aprendizaje Servicio” lo siguiente: </p>
