--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
         <%= link_to(image_tag("LogoRease.png", id: "logo"),root_path) %>
         <div id="panelAside" class="panel panel-default">
             <div class="panel-heading">
-                INICIAR SESIÓN
+                Ingreso Intranet
             </div>
             <div class="panel-body">
 
@@ -86,7 +86,7 @@
                     <%= link_to "Conectarse", new_user_session_path, :id => 'boton' , :class => 'btn btn-lg btn-block'%>
                     </li>
                     <li>
-                    <%= link_to "Crear cuenta", new_user_registration_path, :id => 'boton' , :class => 'btn btn-lg btn-block' %>
+                    <%= link_to "Nuevo usuario", new_user_registration_path, :id => 'boton' , :class => 'btn btn-lg btn-block' %>
                     </li>
                 <%end%>
                 <p class="notice"><%= notice %></p>
@@ -96,7 +96,7 @@
         </div>
         <div id="panelAside" class="panel panel-default">
             <div class="panel-heading">
-                LINKS DE INTERÉS
+                Links de interés
             </div>
             <div class="panel-body">
                  <%= link_to "Facebook REASE", "https://es-es.facebook.com/reasechile", class:"linkInteres" %>
