--- a/app/app/views/devise/passwords/new.html.erb
+++ b/app/app/views/devise/passwords/new.html.erb
@@ -10,6 +10,6 @@
   <div class="actions">
     <%= f.submit "Recuperar contraseña",:id => 'boton', :class => 'btn btn-lg btn-block' %>
   </div>
-	<%= render "devise/shared/links" %>
+	 <!--%= render "devise/shared/links" %-->
 <% end %>
 
