--- a/app/app/views/devise/registrations/new.html.erb
+++ b/app/app/views/devise/registrations/new.html.erb
@@ -46,7 +46,7 @@
           <div class="actions">
             <%= f.submit "Enviar Registro",:id => 'boton', :class => 'btn btn-lg btn-block'%>
           </div>
-          <%= render "devise/shared/links" %>
+          <!--%= render "devise/shared/links" %-->
           
         <% end %>
 
